# nearft-hackathon-contracts

./: Cargo.toml  package.json
nftamm/: Cargo.toml  build_local.sh
nftamm/src/: account_deposit.rs  lib.rs  multi_lp.rs  nft_core.rs  pair.rs  receiver.rs  storage_impl.rs  swap.rs  utils.rs  view.rs
nftamm/src/curves/: curve.rs  errorcodes.rs  exponential.rs  linear.rs  mod.rs
scripts/: createPool.js  mintbase.js
