[package]
name = "nftamm"
version = "1.1.0"
authors = ["Ben <ben@degalabs.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
near-contract-standards = "4.1.0-pre.3"
uint = { version = "0.9.3", default-features = false }

[profile.release]
overflow-checks = true
